force-app/main/default/objects/T5_Feature_Flags__mdt/T5_Feature_Flags__mdt.object-meta.xml
<CustomObject>
    <label>T5 Feature Flags</label>
</CustomObject>