force-app/main/default/objects/T5_Feature_Flags__mdt/fields/Data_Cloud_Search_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Data_Cloud_Search_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Data Cloud 검색 활성화</label>
    <type>Checkbox</type>
</CustomField>