force-app/main/default/objects/T5_Feature_Flags__mdt/fields/Service_Agent_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Service_Agent_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Service Agent 활성화</label>
    <type>Checkbox</type>
</CustomField>