force-app/main/default/objects/T5_Feature_Flags__mdt/fields/Slack_Alert__c.field-meta.xml
<CustomField>
    <fullName>Slack_Alert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Slack Alert 활성화</label>
    <type>Checkbox</type>
</CustomField>