force-app/main/default/objects/T5_Feature_Flags__mdt/fields/Trend_Alert_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Trend_Alert_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trend Alert 활성화</label>
    <type>Checkbox</type>
</CustomField>