force-app/main/default/objects/T5_Feature_Flags__mdt/fields/Virtual_IoT_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Virtual_IoT_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>가상 IoT 활성화</label>
    <type>Checkbox</type>
</CustomField>